--- a/src/components/Editor/Editor.module.css
+++ b/src/components/Editor/Editor.module.css
@@ -12,4 +12,15 @@
             color: var(--color-500);
         }
     }
+
+    > main {
+
+        > textarea {
+            width: 100%;
+            height: 100dvh;
+            border-style: none;
+            padding: 1rem;
+            color: var(--color-700);
+        }
+    }
 }
