--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,11 @@
             grid-column: 1/-1;
             grid-row: 1/-1;
         }
+
+        > #PREVIEW {
+            grid-column: 1/-1;
+            grid-row: 1/-1;
+        }
     }
 }
 
