--- a/src/App.css
+++ b/src/App.css
@@ -68,20 +68,42 @@
 
 /* MOBILE */
 #APP {
+    height: 100dvh;
 
     > main {
         display: grid;
         grid-template-columns: 1fr;
-        
+        grid-template-rows: 1fr;
+
         > #EDITOR {
             grid-column: 1/-1;
-            grid-row: 1/-1;
         }
 
         > #PREVIEW {
             grid-column: 1/-1;
-            grid-row: 1/-1;
         }
+    }
+}
+
+#APP.sidebar-open {
+    display: grid;
+    grid-template-columns: 250px 1fr;
+    grid-template-rows: auto 1fr;
+    overflow-x: hidden; /* This allows us to push all elements to the right without having a weird white space at the bottom */
+
+    > #SIDEBAR {
+        grid-column: 1/1;
+        grid-row: 1/-1;
+    }
+
+    > header {
+        grid-column: 2/-1;
+        grid-row: 1/2;
+    }
+    
+    > main {
+        grid-column: 2/-1;
+        grid-row: 2/-1;
     }
 }
 
@@ -99,8 +121,9 @@
 
 /* UTILITY CLASSES */
 
+
 /* TEXT STYLES */
-.text-style-body {
+.text-style-body-m {
     font-family: var(--font-roboto-light);
     font-size: 13px;
 }
