--- a/src/components/editor/Editor.module.css
+++ b/src/components/editor/Editor.module.css
@@ -1,5 +1,8 @@
 
 .wrapper {
+    display: flex;
+    flex-direction: column;
+    
     > header {
         display: flex;
         align-items: center;
@@ -13,10 +16,13 @@
     }
 
     > main {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
 
         > textarea {
+            flex: 1;
             width: 100%;
-            height: 100dvh;
             padding: 1rem;
             border-style: none;
             color: var(--color-700);
