feat: added close menu icon to appear when the menu is open

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -19,9 +19,14 @@
             border-style: none;
             background-color: var(--color-700);
 
-            > svg {
+            > .openMenuIcon {
                 width: 23px;
                 height: 14px;
+            }
+
+            > .closeMenuIcon {
+                width: 18px;
+                height: 18px;
             }
         }
 
