fix: fixed a problem where preview will cover 100% content area when preview state is active
Editor component will be disabled but it will show a blank space (where the editor was) and the
preview component won't expand to fill that space. This has now been fixed.

--- a/src/App.css
+++ b/src/App.css
@@ -147,6 +147,14 @@
                 display: block;
                 grid-column: 2/-1;
             }
+
+            /* Modifiers */
+            &.previewActive {
+
+                > #PREVIEW {
+                    grid-column: 1/-1;
+                }
+            }
         }
     }
 }
