--- a/src/App.css
+++ b/src/App.css
@@ -156,6 +156,26 @@
                 }
             }
         }
+        
+        /* Modifiers */
+        &.sidebarActive {
+            grid-template-columns: 250px 1fr;
+            grid-template-rows: auto 1fr;
+        
+            > #SIDEBAR {
+                grid-column: 1/2;
+                grid-row: 1/-1;
+            }
+        
+            > header {
+                grid-column: 2/-1;
+                grid-row: 1/2;
+            }
+            
+            > main {
+                width: 100dvw;
+            }
+        }
     }
 }
 
