--- a/src/components/editor/Editor.module.css
+++ b/src/components/editor/Editor.module.css
@@ -29,3 +29,17 @@
         }
     }
 }
+
+/* TABLETS */
+@media screen and (min-width: 768px) {
+    .wrapper {
+
+        > header {
+
+            > svg {
+                display: none;
+            }
+        }
+    }
+}
+
