--- a/src/components/preview/Preview.module.css
+++ b/src/components/preview/Preview.module.css
@@ -18,7 +18,7 @@
         display: flex;
         flex-direction: column;
 
-        > .textBox {
+        > .previewMarkdown {
             display: flex;
             flex-direction: column;
             flex: 1;
