feat: changing document name will now be saved and reflect changes in the sidebar MY DOCUMENTS
For now the user can change the name but there is no file ext. requirement and *.md can be replaced
or ignored. Not sure if the app design requires it but I will leave a note to remind me.

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -53,8 +53,28 @@
                     display: none;
                 }
 
-                > h2 {
+                > form {
+                    > input {
+                        background-color: transparent;
+                        color: var(--color-100);
+                        padding-bottom: 5px;
+                        
+                        &:focus {
+                            border-style: none;
+                            border-bottom-style: solid;
+                            border-width: 1px;
+                            border-color: var(--color-100);
+                            outline: none;
+                            caret-color: var(--color-orange);
+                        }
+                    }
+                }
+
+                > button {
                     align-self: flex-start;
+                    background-color: transparent;
+                    border-style: none;
+                    color: var(--color-100);
                 }
             }
         }
