style: added correct styling for MY DOCUMENTS on sidebar based on design doc
Made sure that the button is hidden and transparent. When the user hovers over the button the text
color of the document name will chang eto orange like the design doc.

--- a/src/components/sidebar/Sidebar.module.css
+++ b/src/components/sidebar/Sidebar.module.css
@@ -62,9 +62,15 @@
                     > p {
                         color: var(--color-500);
                     }
-    
-                    > h3 {
+
+                    > button {
                         color: var(--color-100);
+                        background-color: transparent;
+                        border-style: none;
+
+                        &:hover {
+                            color: var(--color-orange);
+                        }
                     }
                 }
             }
