--- a/src/components/preview/Preview.module.css
+++ b/src/components/preview/Preview.module.css
@@ -11,6 +11,22 @@
         > h2 {
             color: var(--color-500);
         }
+
+        > button {
+            width: 20px;
+            height: 20px;
+            border-style: none;
+
+            &:hover {
+
+                > svg {
+    
+                    > path {
+                        fill: var(--color-orange);
+                    }
+                }
+            }
+        }
     }
 
     > main {
