feat: added toggle functionality to the toggle theme checkbox  and it shows if it's light or dark
This is only the toggle functionality and it does not change the theme at this moment. Theme icons
will turn white if it's currently active.

--- a/src/components/sidebar/Sidebar.module.css
+++ b/src/components/sidebar/Sidebar.module.css
@@ -81,6 +81,16 @@
         display: flex;
         align-items: center;
         gap: 10px;
+
+        > svg {
+            
+            &.active {
+                
+                > path {
+                    fill: var(--color-100);
+                }
+            }
+        }
         
         /* Handles theme toggle css styling */
         > .toggleBox {
@@ -94,10 +104,6 @@
                 appearance: none;
                 border-radius: 14.5px;
                 background-color: var(--color-600);
-            }
-
-            > input[type="checkbox"]:checked {
-                background-color: var(--color-orange);
             }
 
             > span {
