--- a/src/components/editor/Editor.module.css
+++ b/src/components/editor/Editor.module.css
@@ -18,6 +18,8 @@
             width: 20px;
             height: 20px;
             border-style: none;
+            background-color: transparent;
+
 
             &:hover {
 
@@ -42,6 +44,36 @@
             padding: 1rem;
             border-style: none;
             color: var(--color-700);
+        }
+    }
+
+    /* MODIFIERS */
+    &.themeDark {
+        
+        > header {
+            background-color: var(--color-900);
+
+            > h2 {
+                color: var(--color-400);
+            }
+
+            > button {
+
+                > svg {
+
+                    > path {
+                        fill: var(--color-400);
+                    }
+                }
+            }
+        }
+
+        > main {
+
+            > textarea {
+                color: var(--color-400);
+                background-color: var(--color-1000);
+            }
         }
     }
 }
