--- a/src/components/preview/Preview.module.css
+++ b/src/components/preview/Preview.module.css
@@ -1,5 +1,7 @@
 
 .wrapper {
+    display: flex;
+    flex-direction: column;
     
     > header {
         display: flex;
@@ -14,6 +16,7 @@
 
         > button {
             border-style: none;
+            background-color: transparent;
 
             &:hover {
 
@@ -33,10 +36,10 @@
         flex-direction: column;
 
         > .previewMarkdown {
-            display: flex;
-            flex-direction: column;
             flex: 1;
             width: 100%;
+            display: flex;
+            flex-direction: column;
             border-style: none;
             padding: 24px;
             gap: 20px;
@@ -129,6 +132,76 @@
                 color: var(--color-1000);
                 border-radius: 4px;
                 background-color: var(--color-200);
+            }
+        }
+    }
+
+    &.themeDark {
+        background-color: var(--color-1000);
+        
+        > header {
+            background-color: var(--color-900);
+    
+            > h2 {
+                color: var(--color-400);
+            }
+
+            > button {
+
+                > svg {
+
+                    > path {
+                        fill: var(--color-400);
+                    }
+                }
+
+                &:hover {
+
+                    > svg {
+        
+                        > path {
+                            fill: var(--color-orange);
+                        }
+                    }
+                }
+            }
+        }
+
+        > main {
+            
+            > .previewMarkdown {
+                background-color: var(--color-1000);
+
+                > h1, h2, h3, h4, h5 {
+                    color: var(--color-100);
+                }
+
+                > p {
+                    color: var(--color-400);
+                }
+
+                > ol, ul {
+                    > li {
+                        color: var(--color-400);
+                    }
+                }
+
+                > blockquote {
+                    background-color: var(--color-800);
+
+                    > p {
+                        color: var(--color-100);
+
+                        > a {
+                            color: var(--color-100);
+                        }
+                    }
+                }
+
+                > pre {
+                    color: var(--color-100);
+                    background-color: var(--color-800);
+                }
             }
         }
     }
