--- a/src/components/sidebar/Sidebar.module.css
+++ b/src/components/sidebar/Sidebar.module.css
@@ -36,6 +36,10 @@
             border-radius: 4px;
             color: var(--color-100);
             background-color: var(--color-orange);
+
+            &:hover {
+                background-color: var(--color-orange-hover);
+            }
         }
 
         > .documentListContainer {
